TAG: pubmed2geneload-6-0-20-2
DATE: 10/03/2022
STAFF: lec
pubmed2geneload.config MAIL_LOG_PROC change to mgiadmin

TAG: pubmed2geneload-6-0-20-1
DATE: 05/31/2022
STAFF: lec
cream 2022/6.20 release
wts2-856/api/lit triage/merge LT & Reference model
STATUS_URL = 'littriage/statusUpdate...' -> STATUS_URL = 'reference/statusUpdate...'

TAG: pubmed2geneload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13349/Genome Build 39

TAG: pubmed2geneload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: pubmed2geneload-6-0-15-1
DATE: 06/17/2020
STAFF: lec
CHANGES: TR13326/curl fix

TAG: pubmed2geneload-6-0-12-2
DATE: 03/19/2018
STAFF: lec
CHANGES:
TR12822/add duplicate check

TAG: pubmed2geneload-6-0-12-1
DATE: 02/07/2018
STAFF: lec
CHANGES:
TR12662/GMC/add autosequence

TAG: pubmed2geneload-6-0-11-4
TAG: pubmed2geneload-6-0-11-3
TAG: pubmed2geneload-6-0-11-2
TAG: pubmed2geneload-6-0-11-1
DATE: 10/04/2017
STAFF: sc
CHANGES: Initial tag TR12250